53

* Fix license text
* New translations

51

* Add support for screen rotation
* Make separate games for shapes, numbers, and words

49

* New translations

47

* New translations

45

* New translations

43

BUG FIX:
* Fixed name change in radio button (#4028)

41

ENHANCEMENTS:
* GTK-3 version
* Added summary to activity.info
* Added support for touch

39

BUG FIX:
* Closing the Welcome message clicks on a card too (#3567)
* Sometimes cards disappear (#3568)
* Detect and correct race condition (#3579)
(Thanks to Manuel Kaufmann for help tracking down these bugs)

38

ENHANCEMENTS:
* New translations
* Add stop button to help animation

BUG FIX:
http://dev.laptop.org/ticket/11804
* Refactoring of animation to use less memory
* Refactoring of deck to use less memory

37

BUG FIX:
* Fixed typo that prevented help animation from terminating

ENHANCEMENT:
* Autoadvance levels when play improves

36

ENHANCEMENTS:
* Support for dragging cards
* Visual feedback on mismatches
* Cursor when editing cards
* New help animation on first load
* Copy scores to clipboard (for import into Simple Graph)
* Notification when loading new games
* Slight delay after match before dealing new cards to allow for some
  scrutiny of results
* Addition of toolbar help menus
* Rebranding as Dimensions (a more apt name)
* Updated wiki page (See http://wiki.sugarlabs.org/go/Activities/Dimensions)
* New translations
(Tip of the hat to Mark Battley for great feedback and suggestions.)

35

ENHANCEMENTS:
* New translations

34

ENHANCEMENTS:
* New translations

BUG FIX:
* Fixed problem with animated cards missing destinations

33

ENHANCEMENTS:
* New translations
* New end-of-game graphics

32

ENHANCEMENT:
* Using Cairo graphics
* Animate loading of new cards

BUG FIX:
* Set robot time during "attract mode"

31

ENHANCEMENT:
* Animate matches when moving to discard pile

BUG FIX:
* FIx GPLv3 license address

30

ENHANCEMENTS:
* Switching buttons to radio buttons
* More button icon refactoring
