@@ -1,3 +1,11 @@
+56
+
+* New layout
+
+55
+
+* New translations
+
 53
 
 * Fix license text
